--- a/components/zoom-map/zoom-map.module.css
+++ b/components/zoom-map/zoom-map.module.css
@@ -9,7 +9,7 @@
 
   @include-media ('desktop') {
     --cutoff: desktop-vw(150px);
-    height: calc(100vh - var(--cutoff));
-    width: calc(100vh - var(--cutoff));
+    height: calc(var(--svh-calc) - var(--cutoff));
+    width: calc(var(--svh-calc) - var(--cutoff));
   }
 }
